--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -80,6 +80,7 @@ a:hover{
 
 .nav__link:hover{
     color: rgba(0, 0, 0, 0.5);
+    text-decoration: none;
 }
 
 .nav__link:hover::after{
@@ -92,7 +93,7 @@ a:hover{
 .navbar .navlist2 button{
     border: solid 1px  #000;
     border-radius: 40px;
-    padding: 5px 20px;
+    padding: 5px 1em;
 }
 
 .navbar .navlist2 button:hover{
@@ -417,9 +418,10 @@ a:hover{
     right: -100%;
     height: 100%;
     width: 50%;
+    padding: 7em 10%;
     background-color: var(--bg-menu);
     backdrop-filter: blur(16px);
-    padding: 7rem 5rem;
+ 
     transition: 0.5s;
     }
 
@@ -436,6 +438,7 @@ a:hover{
         align-items: start;
         row-gap: 20px;
         list-style: none;
+        padding: 0;
     }
 
     .navlist2{
